<resources>
    <string name="app_name">My List</string>
    <string name="my_list">Мой список</string>
    <string name="tasks_is_over">Заданий больше нет</string>
    <string name="title">Задание:</string>
    <string name="default_task_title">Задание</string>
    <string name="description">Описание:</string>
    <string name="default_task_description">Описание</string>
    <string name="date">Сроки:</string>
    <string name="default_task_date">Сроки</string>
    <string name="today">Сегодня</string>
    <string name="new_task">Новое задание</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="create">+</string>
    <string name="change_task">Изменить задание</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="date_hint">Дата</string>
    <string name="sign_in">Войти</string>
    <string name="have_account">Уже зарегистрированы?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="email">Электронный адрес</string>
    <string name="password">Пароль</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="ok">ОК</string>


</resources>