<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customDarkGray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- "Новое задание" -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/hindsiliguri_bold"
        android:text="@string/change_task"
        android:textAlignment="center"
        android:textColor="@color/customWhite"
        android:textSize="32sp" />

    <!-- Разделитель. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/customLightGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/customMiddleGray"
        android:orientation="vertical"
        android:paddingTop="22dp"
        android:paddingBottom="22dp">

        <!-- Заголовок -->
        <TextView
            android:id="@+id/tvAddTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/hindsiliguri_regular"
            android:text="@string/title"
            android:textColor="@color/customWhite"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/customMiddleGray"
            android:fontFamily="@font/hindsiliguri_light"
            android:hint="@string/default_task_title"
            android:inputType="text"
            android:maxLength="50"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/customWhite"
            android:textColorHint="@color/customLightGray" />

        <!-- Описание -->
        <TextView
            android:id="@+id/tvAddDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/hindsiliguri_regular"
            android:text="@string/description"
            android:textColor="@color/customWhite"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/customMiddleGray"
            android:fontFamily="@font/hindsiliguri_light"
            android:hint="@string/default_task_description"
            android:inputType="text"
            android:maxLength="80"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/customWhite"
            android:textColorHint="@color/customLightGray" />

        <!-- Сроки -->
        <TextView
            android:id="@+id/tvAddDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/hindsiliguri_regular"
            android:text="@string/date"
            android:textColor="@color/customWhite"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTaskDate"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/customMiddleGray"
            android:fontFamily="@font/hindsiliguri_light"
            android:hint="@string/default_task_date"
            android:inputType="text"
            android:maxLength="11"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/customWhite"
            android:textColorHint="@color/customLightGray" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_green_button"
        android:fontFamily="@font/hindsiliguri_bold"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/customWhite"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_yellow_button"
        android:fontFamily="@font/hindsiliguri_bold"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/customWhite"
        android:textSize="22sp" />
</LinearLayout>