<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customDarkGray"
    android:orientation="vertical"
    tools:context=".Controller.MainActivity">

    <!-- "Регистрация" -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/hindsiliguri_bold"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/customWhite"
        android:textSize="32sp" />

    <!-- Разделитель. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/customLightGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/customMiddleGray"
        android:orientation="vertical"
        android:paddingTop="22dp"
        android:paddingBottom="22dp">

        <EditText
            android:id="@+id/REGetpasswordone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:background="@color/customMiddleGray"
            android:drawableStart="@drawable/ic_lock_48"
            android:drawablePadding="12dp"
            android:fontFamily="@font/hindsiliguri_light"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLength="20"
            android:paddingEnd="12dp"
            android:textColor="@color/customWhite"
            android:textColorHint="@color/customLightGray" />

        <EditText
            android:id="@+id/REGetpasswordtwo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/customMiddleGray"
            android:drawableStart="@drawable/ic_lock_48"
            android:drawablePadding="12dp"
            android:fontFamily="@font/hindsiliguri_light"
            android:hint="@string/repeat_password"
            android:inputType="text"
            android:maxLength="20"
            android:paddingEnd="12dp"
            android:textColor="@color/customWhite"
            android:textColorHint="@color/customLightGray" />
    </LinearLayout>

    <!-- Разделитель. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/customLightGray" />

    <Button
        android:id="@+id/REGbtnregister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_blue_button"
        android:fontFamily="@font/hindsiliguri_bold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/customWhite"
        android:textSize="22sp" />
</LinearLayout>