<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="20dp"
    android:background="@color/customMiddleGray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <!-- Основной блок (заголовок и детали). -->
        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTaskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/hindsiliguri_regular"
                android:text="@string/default_task_title"
                android:textColor="@color/customWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvTaskDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/hindsiliguri_light"
                android:text="@string/default_task_description"
                android:textColor="@color/customWhite"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Дата. -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/tvTaskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/hindsiliguri_regular"
                android:text="@string/today"

                android:textColor="@color/customWhite"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Разделитель. -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/customWhite" />
</LinearLayout>
