<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/googleBlue">

    <!-- Верхняя синяя область. -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@color/googleBlue">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <!-- "Мой список" -->
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_marginTop="20dp"
                    android:textSize="32sp"
                    android:textColor="@color/customWhite"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/my_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- "Просто сделай это!" -->
                <TextView
                    android:id="@+id/tvSubtitle"
                    android:textSize="18sp"
                    android:textColor="@color/customWhite"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/just_do_it"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Кнопка "Создать" -->
            <Button
                android:id="@+id/btnAddTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="30dp"
                android:textAllCaps="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/bg_btn_new"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/create"
                android:textSize="22sp"
                android:textColor="@color/customWhite"
                android:textAlignment="center"/>


        </LinearLayout>

        <!-- Разделитель. -->
        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:background="@color/customGray3"
            android:layout_height="1dp" />
    </LinearLayout>

    <!-- Список. -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks"
        class="androidx.appcompat.app.AlertController$RecycleListView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

    </androidx.recyclerview.widget.RecyclerView>

    <!-- "Заданий больше нет" -->
    <TextView
        android:id="@+id/tvEnd"
        android:textSize="16sp"
        android:textColor="@color/customWhite"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/tasks_is_over"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>